// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Card with icon 1`] = `
.content {
  padding: 15px !important;
}

.card {
  border: none !important;
  border-top: 3px solid #D15130 !important;
  background: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12) !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 3px !important;
  margin-bottom: 15px !important;
  overflow: hidden !important;
}

.title {
  border-bottom: 2px solid #e7eaec !important;
  background: !important;
  color: #D15130 !important;
  width: 100% !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  padding: 15px !important;
  font-size: 14px !important;
  font-weight: 600 !important;
  text-transform: uppercase !important;
}

.icon {
  margin-right: 10px !important;
}

<div
  className="card"
>
  <div
    className="title"
  >
    <span
      className="icon"
    >
      <span>
        icon
      </span>
    </span>
    Test title
  </div>
  <div
    className="content"
  >
    Test Card
  </div>
</div>
`;

exports[`Card Card without container 1`] = `
.card {
  border: none !important;
  border-top: 3px solid #D15130 !important;
  background: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12) !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 3px !important;
  margin-bottom: 15px !important;
  overflow: hidden !important;
}

.title {
  border-bottom: 2px solid #e7eaec !important;
  background: !important;
  color: #D15130 !important;
  width: 100% !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  padding: 15px !important;
  font-size: 14px !important;
  font-weight: 600 !important;
  text-transform: uppercase !important;
}

.icon {
  margin-right: 10px !important;
}

<div
  className="card"
>
  <div
    className="title"
  >
    <span
      className="icon"
    >
      <span>
        icon
      </span>
    </span>
    Test title
  </div>
  Test Card
</div>
`;

exports[`Card Default Card 1`] = `
.card {
  border: 1px solid #3F88C5 !important;
  border-top: undefined !important;
  background: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12) !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 3px !important;
  margin-bottom: 15px !important;
  overflow: hidden !important;
}

.content {
  padding: 15px !important;
}

<div
  className="card"
>
  <div
    className="content"
  >
    Test alert
  </div>
</div>
`;

exports[`Card Outline Card 1`] = `
.content {
  padding: 15px !important;
}

.card {
  border: none !important;
  border-top: 3px solid #D15130 !important;
  background: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12) !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 3px !important;
  margin-bottom: 15px !important;
  overflow: hidden !important;
}

.title {
  border-bottom: 2px solid #e7eaec !important;
  background: !important;
  color: #D15130 !important;
  width: 100% !important;
  -moz-box-sizing: border-box !important;
  box-sizing: border-box !important;
  padding: 15px !important;
  font-size: 14px !important;
  font-weight: 600 !important;
  text-transform: uppercase !important;
}

<div
  className="card"
>
  <div
    className="title"
  >
    Test title
  </div>
  <div
    className="content"
  >
    Test Card
  </div>
</div>
`;
